--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>网络编辑与制作课程作业</h1>
     <ul>
       <li><a href="24.html.html">作业1：HTML主要元素练习</a></li>
-      <li><a href="04=css.html">css练习</a></li>
+      <li><a href="04=css.html">作业2：CSS的练习</a></li>
      
     </ul>
 </body>
