第6次小更改

--- a/04=css.html
+++ b/04=css.html
@@ -17,10 +17,15 @@
             font-family: 微软雅黑;
             font-weight: 300;
             line-height: 1.5;
+
         }
         .note{
             text-indent: 2em;
         }
+        p{
+            text-indent: 2em;
+        }
+    
         
     </style>
 </head>
