--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="24.html.html">作业1：HTML主要元素练习</a></li>
       <li><a href="04=css.html">作业2：CSS的练习</a></li>
+      <li><a href="4-css.html">作业3：CSS的练习</a></li>
      
     </ul>
 </body>
