--- a/4-css.html
+++ b/4-css.html
@@ -26,9 +26,10 @@
             text-indent: 2em;
         }
     p{
-        background-color: antiquewhite;
+        background-color: antiquewhite; color: rgb(162, 133, 133);
     }
         #element{background: linear-gradient(to bottom);
+           
 
         }
     </style>
