--- a/4-css.html
+++ b/4-css.html
@@ -26,12 +26,20 @@
             text-indent: 2em;
         }
     p{
-        background-color: antiquewhite; color: rgb(162, 133, 133);
+        background-color: antiquewhite;
     }
         #element{background: linear-gradient(to bottom);
-           
-
         }
+        div#footer {
+    background-image: url(bg.png);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center bottom;
+}
+div {
+  background: #466368;
+  background: linear-gradient(#648880, #293f50);
+}
     </style>
 </head>
 <body>
