--- a/03-css.html
+++ b/03-css.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>熊猫的简介</title>
     <style>
         h1{
-            color: black;
+            color: rgb(235, 142, 142);
             text-align: center;
-            font-family: 黑体;
-            font-weight: 800;
-            line-height: 1.5;
             }
-        h2{
-            color: rgb(44, 10, 197);
-            font-family: 微软雅黑;
-            font-weight: 300;
-            line-height: 1.5;
-
-        }
         .note{
             text-indent: 2em;
         }
+        #uni {
+          color: brown;
+        color:purple
+      }
+      a:link {
+        color: orangered;
+      }
+      a:visited {
+        color: rgb(97, 155, 206);
+      }
+      h1,h2{
+        font-family: 微软雅黑;
+      }
         p{
             text-indent: 2em;
         }
-    p{
-        background-color: antiquewhite;
-    }
-        #element{background: linear-gradient(to bottom);
-        }
-        div#footer {
-    background-image: url(bg.png);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center bottom;
-}
-div {
-  background: #466368;
-  background: linear-gradient(#648880, #293f50);
-}
     </style>
 </head>
 <body>
-    <h1>熊猫的简介</h1>
+    <h1 style="color: cornflowerblue;">熊猫的简介</h1>
+    <ul style="color: rgb(188, 214, 214);">
+        <li>外貌特征</li>
+        <li>生活习性</li>
+        <li>繁殖行为</li>
+        <li>保护现状</li>
+        <li>文化意义</li>
+        <li>社会影响</li>
+    </ul>
     <p>熊猫，学名为Ailuropoda melanoleuca，是哺乳纲食肉目大熊猫科的一种动物，主要生活在中国的四川、陕西和甘肃等省的山区。大熊猫是中国的国宝，也是世界著名的濒危物种，被认为是活化石，其历史可以追溯到800万年前。</p>
-<h2>外貌特征：</h2>
-<p>大熊猫最显著的特征是它们的黑白相间的毛色，有着大圆脸、黑眼圈、圆滚滚的体形和短短的尾巴。它们的前肢比后肢长，有助于它们在竹林中攀爬。</p>
+<p id="uni">目录列表：外貌特征、生活习性、繁殖行为、保护现状、文化意义、社会影响</p>
+    <h2>外貌特征：</h2>
+<p class="note">大熊猫最显著的特征是它们的黑白相间的毛色，有着大圆脸、黑眼圈、圆滚滚的体形和短短的尾巴。它们的前肢比后肢长，有助于它们在竹林中攀爬。</p>
 <h2>生活习性：</h2>
 <p>大熊猫以竹子为主食，虽然它们属于食肉目，但几乎完全以竹子为食，每天需要消耗12-38公斤的竹子来满足能量需求。它们的活动时间主要在清晨和傍晚，性格温和，喜欢独自生活。</p>
 <h2>繁殖行为：</h2>
