--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="01.html.html">作业1：HTML主要元素练习</a></li>
       <li><a href="02-css.html">作业2：css基础知识练习1</a></li>
-      <li><a href="04=css.html">作业3：CSS基础知识练习2</a></li>
+      <li><a href="03-css.html">作业3：CSS基础知识练习2</a></li>
       <li><a href="4-css.html">作业4：CSS基础知识练习3</a></li>
      
     </ul>
