--- a/02-css.html
+++ b/02-css.html
@@ -17,7 +17,7 @@
 <body>
     <h1>熊猫的简介</h1>
     <h1>熊猫的简介</h1>
-    <h1> stylt="color= black;">熊猫的简介</h1>
+    <h1 style="color: bisque;">熊猫的简介</h1>
     <h1>熊猫的简介</h1>
     <p><a href="https://bingdundu.github.io/web.del/04=css.html">熊猫的简介"</a>
         大熊猫已在地球上生存了至少800万年，被誉为“活化石”和“中国国宝”，世界自然基金会的形象大使，是世界生物多样性保护的旗舰物种。截至2024年1月，中国大熊猫野生种群增至近1900只 。截至2023年10月，中国旅居国外的大熊猫总数达到63只。</p>
