--- a/02-css.html
+++ b/02-css.html
@@ -8,6 +8,8 @@
     <style>
         h1{
             color: blue;
+            text-align: center;
+
         }
         p{
             text-indent: 2em;
